fix(header): layout shift due to login link (#424)
use simple icon and set width/height outside of web component

--- a/components/navigation/desktop.css
+++ b/components/navigation/desktop.css
@@ -39,4 +39,9 @@
   .navigation__button {
     display: none;
   }
+
+  mdn-user-menu {
+    width: 2.125rem;
+    height: 2.125rem;
+  }
 }
