--- a/components/user-menu/base.css
+++ b/components/user-menu/base.css
@@ -1,12 +1,5 @@
 /* Base */
 
-/* Login link */
-
-.user-menu__login {
-  color: inherit;
-  white-space: nowrap;
-}
-
 /* User menu dropdown */
 
 .user-menu__button {
