--- a/components/user-menu/desktop.css
+++ b/components/user-menu/desktop.css
@@ -3,8 +3,20 @@
 @media (--screen-menu-full) {
   .user-menu {
     position: relative;
-    width: 34px;
-    height: 34px;
+  }
+
+  .user-menu__login {
+    width: 100%;
+    height: 100%;
+
+    &::part(label) {
+      position: absolute;
+
+      width: 0;
+      height: 0;
+
+      overflow: hidden;
+    }
   }
 
   /* User menu dropdown */
